Fixed overflow of links on mobile for results page

--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
    Base styles: opinionated defaults
    ========================================================================== */
 * {
-   outline: 1px red solid;
+   /*outline: 1px red solid;*/
    font-family: 'Open Sans', arial, sans-serif;
 }
 
@@ -56,6 +56,10 @@ footer p {
     font-family: 'Quicksand', arial, sans-serif;
     color: gray;
     margin: 0;
+}
+
+.quicksand-font {
+    font-family: 'Quicksand', arial, sans-serif;
 }
 
 
@@ -169,11 +173,28 @@ footer p {
     text-decoration: none;
 }
 
-#searchResultsPage {
-    margin: 1em 0;
+#formResultsPage {
+    margin: 1em 0 1em 1em;
 }
 
+/***** Search Results List Item ******/
 
+.cleanerList > ul > li {
+    border-top: 2px solid #e9e9e9;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.cleanerList {
+    border-bottom: 2px solid #e9e9e9;
+}
+
+.cleanerList p {
+    margin: 0;
+}
+
+.cleanerInfo {
+}
 
 
 
@@ -255,6 +276,26 @@ footer p {
 
 .clearfix:after {
     clear: both;
+}
+
+.dont-break-out {
+
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+
 }
 
 /* ==========================================================================
